Find artist by Id js working

--- a/MusicTrackerREST/src/main/resources/application.properties
+++ b/MusicTrackerREST/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/musictrackerdb?useSSL=false&&u
 spring.datasource.username=musicuser
 spring.datasource.password=musicuser
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jmx.default-domain=MusicTrackerREST
