--- a/MusicTrackerREST/build.gradle
+++ b/MusicTrackerREST/build.gradle
@@ -12,6 +12,12 @@ sourceCompatibility = '1.8'
 repositories {
 	mavenCentral()
 }
+war {
+  // Gradle will replace the variable archivesBaseName
+  // with our app name, as defined in settings.gradle
+  archiveFileName = "${archivesBaseName}.war"
+  destinationDirectory = file("../")     // Project workspace directory
+}
 
 dependencies {
 implementation project(':MusicTrackerJPA')
